--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1XkeMw32q6bxd-3PWK3DiNnd3lhtsWuQf",
-      "authorship_tag": "ABX9TyP02XMoH4+mdVeuQGlVBRq9",
+      "authorship_tag": "ABX9TyN3m5JIC6NvhocMfQXluZbL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,14 @@
         "*   Model architectures (3 wide layers seem best so far. Wide nets are preferred over deep nets for this task)\n",
         "*   Transfer learning (didn't improve, more or less same)\n",
         "*   Upsampling with multi-label SMOTE (didn't improve)\n",
+        "\n",
+        "Left to explore:\n",
+        "\n",
+        "*   Feature selection\n",
+        "*   Dimensionality reduction\n",
+        "*   Dealing with imbalance (MLSMOTE didn't help and I don't know why)\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ]
