model tweaks - logloss 0.0166

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -8,13 +8,14 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1XkeMw32q6bxd-3PWK3DiNnd3lhtsWuQf",
-      "authorship_tag": "ABX9TyN3m5JIC6NvhocMfQXluZbL",
+      "authorship_tag": "ABX9TyNTSsRR5z5ysmQW1OAG0HTg",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -75,10 +76,9 @@
         "from sklearn.metrics import log_loss\n",
         "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
         "from sklearn.neighbors import NearestNeighbors\n",
-        "from sklearn.utils import class_weight\n",
-        "# from iterstrat.ml_stratifiers import MultilabelStratifiedKFold"
+        "from sklearn.utils import class_weight"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
         "test = pd.read_csv(\"/content/drive/My Drive/MOA/Data/test_features.csv\")\n",
         "submit = pd.read_csv(\"/content/drive/My Drive/MOA/Data/sample_submission.csv\")"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
         "    \n",
         "    return (train_x_trans, train_y, train_y_ns, test_trans)"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -167,23 +167,22 @@
       "source": [
         "train_x_trans, train_y, train_y_ns, test_trans = preprocessing(train_x, train_y, train_y_ns, test)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "k9dEZyCXYq0g",
-        "outputId": "c420515c-55c7-44bf-89f8-042f578f5583",
+        "outputId": "3497f2e0-6327-49e6-e8e5-46ea0bb73457",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "train_x_trans.shape"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -195,7 +194,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -207,7 +206,7 @@
       "source": [
         "all_features = train_x_trans.columns"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -229,7 +228,7 @@
         "    tail_label = irlbl[irlbl > threshold_irlbl].index.tolist()\n",
         "    return tail_label"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +250,7 @@
         "    y_sub = y[y.index.isin(index)].reset_index(drop = True)\n",
         "    return X_sub, y_sub"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +273,7 @@
         "    euclidean, indices = nbs.kneighbors(X)\n",
         "    return indices"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +314,7 @@
         "    \n",
         "    return new_X, target"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +334,7 @@
         "# train_y_ups = train_y.append(train_y_aug, ignore_index=True)\n",
         "# train_x_ups.shape, train_y_ups.shape"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,15 +359,18 @@
         "def model_init(out_layer_size=206):\n",
         "    # initializing the model\n",
         "    model = keras.models.Sequential([\n",
-        "        Dense(2200, activation='elu', input_shape=(876,), kernel_initializer='he_normal'),\n",
+        "        Dense(2100, activation='elu', input_shape=(876,), kernel_initializer='he_normal'),\n",
         "        BatchNormalization(),\n",
         "        Dropout(0.4),\n",
         "        Dense(1024, activation='elu',kernel_initializer='he_normal'),\n",
         "        BatchNormalization(),\n",
         "        Dropout(0.4),\n",
-        "        Dense(1024, activation='elu',kernel_initializer='he_normal'),\n",
+        "        Dense(2000, activation='elu',kernel_initializer='he_normal'),\n",
         "        BatchNormalization(),\n",
         "        Dropout(0.4),\n",
+        "        # Dense(500, activation='elu',kernel_initializer='he_normal'),\n",
+        "        # BatchNormalization(),\n",
+        "        # Dropout(0.4),\n",
         "        Dense(out_layer_size, activation='sigmoid')\n",
         "    ])\n",
         "    \n",
@@ -380,7 +382,7 @@
         "    \n",
         "    return (model)"
       ],
-      "execution_count": 144,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -393,7 +395,7 @@
         "c_min = 0.001\n",
         "c_max = 0.999"
       ],
-      "execution_count": 145,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -402,7 +404,7 @@
         "id": "22_-9fkiI3BG"
       },
       "source": [
-        "def training(train_x_trans, train_y, train_y_ns, k=5, batch_size=128, epochs=50, num_seeds=2, use_nonscored=True):\n",
+        "def training(train_x_trans, train_y, train_y_ns, k=5, batch_size=128, epochs=50, num_seeds=2, use_nonscored=False):\n",
         "    '''\n",
         "    This function trains the neural net on the non-scored targets (if use_nonscored=True) and uses\n",
         "    transfer learning on the scored targets, otherwise it trains only the scored targets.\n",
@@ -506,7 +508,7 @@
         "\n",
         "    return(test_pred)\n"
       ],
-      "execution_count": 146,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -519,7 +521,7 @@
         "    y_pred = tf.clip_by_value(y_pred,c_min,c_max)\n",
         "    return (-backend.mean(y_true*backend.log(y_pred) + (1-y_true)*backend.log(1-y_pred)))\n"
       ],
-      "execution_count": 147,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -534,7 +536,7 @@
         "        losses.append(log_loss(y_true.loc[:, col], y_pred.loc[:, col]))\n",
         "    return np.mean(losses)"
       ],
-      "execution_count": 148,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -543,10 +545,36 @@
         "id": "VBuXs4tZfIq1"
       },
       "source": [
-        "test_pred = training(train_x_trans,train_y,train_y_ns,k=5,batch_size=128,epochs=50, num_seeds=1, use_nonscored=True)"
+        "test_pred = training(train_x_trans,train_y,train_y_ns,k=8,batch_size=128,epochs=50, num_seeds=3)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RZGBgkfGQKY6"
+      },
+      "source": [
+        "Current best: oof_loss= 0.0166414641\n",
+        "\n",
+        "seed=1, k=8, use_nonscored=False\n",
+        "\n",
+        "model:\n",
+        "\n",
+        "        Dense(2100, activation='elu', input_shape=(876,)kernel_initializer='he_normal'),\n",
+        "        BatchNormalization(),\n",
+        "        Dropout(0.4),\n",
+        "\n",
+        "        Dense(1024, activation='elu',kernel_initializer='he_normal'),\n",
+        "        BatchNormalization(),\n",
+        "        Dropout(0.4),\n",
+        "\n",
+        "        Dense(2000, activation='elu',kernel_initializer='he_normal'),\n",
+        "        BatchNormalization(),\n",
+        "        Dropout(0.4),\n",
+        "        Dense(out_layer_size, activation='sigmoid')"
+      ]
     },
     {
       "cell_type": "code",
@@ -567,7 +595,7 @@
       "source": [
         "test_pred.to_csv('/content/drive/My Drive/MOA/Submission/submission.csv', index=False)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
